--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,12 @@
 html, body {
-    background-image: url("/../images/sa_starwars_virtualbg_16x9_024_0f1a87c3.jpeg");
+    background-color: #f8fafc;
+    /*background-image: url("/../images/sa_starwars_virtualbg_16x9_024_0f1a87c3.jpeg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
+    background-size: cover;*/
+}
+
+.error {
+    color: red;
+    font-size: small;
 }
