--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,6 +37,10 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+.error {
+    color:red;
+}
+
 *,
 *::before,
 *::after {
